--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,11 +1,20 @@
 {
-	"coc.preferences.formatOnType": true,
-	"tsserver.formatOnType": true,
-	"codeLens.enable": true,
-	"html.format.wrapAttributes": "force-expand-multiline",
-	"diagnostic.refreshOnInsertMode": true,
-	"coc.preferences.formatOnTypeFiletypes": ["*"],
-	"python.jediEnabled": false,
-	"python.formatting.provider": "black"
+  "suggest.pumFloatConfig": {
+    "rounded": true,
+    "border": true,
+    "maxWidth": 800
+  },
+  "suggest.completionItemKindLabels": {
+    "method": "",
+    "function": ""
+  },
+  "coc.preferences.extensionUpdateCheck": "daily",
+  "coc.preferences.formatOnType": true,
+  "tsserver.formatOnType": true,
+  "codeLens.enable": true,
+  "html.format.wrapAttributes": "force-expand-multiline",
+  "diagnostic.refreshOnInsertMode": true,
+  "coc.preferences.formatOnTypeFiletypes": ["*"],
+  "python.jediEnabled": false,
+  "python.formatting.provider": "black"
 }
-
