--- a/prac.cfg
+++ b/prac.cfg
@@ -31,8 +31,8 @@ cl_grenadepreview 1
 
 bot_mimic_yaw_offset 0
 bindToggle mouse3 "bot_crouch"
-bind q "noclip"
+bind v "noclip"
 bind space "bot_place"
-bindToggle capslock "bot_mimic"
+bindToggle r "bot_mimic"
 bind c "cl_sim_grenade_trajectory"
-bind v "sv_rethrow_last_grenade"
+bind q "sv_rethrow_last_grenade"
