--- a/prac.cfg
+++ b/prac.cfg
@@ -16,9 +16,9 @@ mp_warmup_end
 
 // Practice
 sv_grenade_trajectory 1
-sv_grenade_trajectory_time 10
+sv_grenade_trajectory_time 6
 // sv_showimpacts 0 more annoying than useful most of the time
-//sv_showimpacts_time 10
+//sv_showimpacts_time 6
 
 mp_restartgame 1
 mp_ignore_round_win_conditions 1
@@ -36,3 +36,8 @@ bind space "bot_place"
 bindToggle r "bot_mimic"
 bind c "cl_sim_grenade_trajectory"
 bind q "sv_rethrow_last_grenade"
+bindToggle f "cl_weapon_debug_show_accuracy"
+alias brushes "incrementvar r_drawclipbrushes 0 2 2"
+bind t brushes
+alias wires "incrementVar r_drawothermodels 1 2 1"
+bind y wires
