--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -236,7 +236,7 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity ".55"
+sensitivity "1.75"
 sk_autoaim_mode "1"
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
